@@ -8,8 +8,8 @@
 	luasocket, rings, wsapi, xavante
 
 	Updated/fixed packages: cdrkit, file, gawk, gstreamer, intltool,
-	iptables, libidn, lmbench, netperf, openssl, php, qt, sqlite,
-	tn5250, usbutils, xkeyboard-config
+	ipsec-tools, iptables, libidn, lmbench, netperf, openssl, php,
+	qt, sqlite, tn5250, usbutils, xkeyboard-config
 
 	Removed packages: modutils
 
@@ -31,6 +31,7 @@
 	#1957: Bump sqlite to 3.6.23.1
 	#1987: intltool: Fix spelling mistake
 	#1999: Typo in path checking
+	#2035: ipsec-tools-0.7.2 fails to build with gcc-4.4.x
 
 2010.05, Released May 30th, 2010:
 
